--- a/proj.win32/GameProject.vcxproj.filters
+++ b/proj.win32/GameProject.vcxproj.filters
@@ -42,6 +42,9 @@
     <ClCompile Include="..\Classes\Asteroid.cpp">
       <Filter>src</Filter>
     </ClCompile>
+    <ClCompile Include="..\Classes\CollisionDetector.cpp">
+      <Filter>src</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="main.h">
@@ -69,6 +72,9 @@
       <Filter>src</Filter>
     </ClInclude>
     <ClInclude Include="..\Classes\Asteroid.h">
+      <Filter>src</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Classes\CollisionDetector.h">
       <Filter>src</Filter>
     </ClInclude>
   </ItemGroup>
